# katha

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-25-katha-sqlx-split-release.md
docs/superpowers/specs/: 2026-06-25-katha-sqlx-split-release-design.md
katha/: Cargo.toml  README.md  arch.md
katha-macros/: Cargo.toml  README.md
katha-macros/src/: lib.rs
katha-macros/tests/: derive_event_name.rs
katha-macros/tests/ui/: event_name_default_pass.rs  event_name_explicit_pass.rs
katha-sqlx/: Cargo.toml  README.md
katha-sqlx/migrations/: 0001_events.sql
katha-sqlx/src/: backend.rs  command_db.rs  command_store.rs  error.rs  event_db.rs  event_store.rs  lib.rs  notifications.rs  pagination.rs  projection_runner.rs  types.rs  validate.rs
katha-sqlx/tests/: sqlx_behavioral_projection_flow_tests.rs  sqlx_command_store_tests.rs  sqlx_dual_backend_tests.rs  sqlx_event_store_tests.rs  sqlx_property_tests.rs
katha-sqlx/tests/common/: mod.rs
katha/migrations/: 0001_commands.sql  0001_events.sql  0002_commands_add_causation_id.sql
katha/proptest-regressions/: sqlx_property_tests.txt
katha/proptest-regressions/traits/: aggregate.txt
katha/src/: error.rs  lib.rs
katha/src/sqlx_store/: command_db.rs  command_store.rs  event_db.rs  event_store.rs  mod.rs  pagination.rs  projection_runner.rs  types.rs
katha/src/traits/: aggregate.rs  command_store.rs  event_name.rs  event_store.rs  mod.rs  version.rs
katha/src/types/: command_write.rs  event_read.rs  event_read_range.rs  event_stream.rs  event_write.rs  expected_version.rs  mod.rs  stream_read_filter.rs
katha/tests/: event_write_helpers_tests.rs  sqlx_behavioral_projection_flow_tests.rs  sqlx_command_store_tests.rs  sqlx_event_store_tests.rs  sqlx_property_tests.rs
katha/tests/common/: mod.rs
