[workspace]
resolver = "3"
members = ["katha", "katha-macros", "katha-sqlx"]

[workspace.package]
version = "0.2.2"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/manchhq/katha"
authors = ["Kunjan Dalal <kunjee17@gmail.com>"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
tempfile = "3.8"
katha = { version = "0.2.2", path = "katha", default-features = false }
katha-macros = { version = "0.2.2", path = "katha-macros" }

# Release flow: `just release <level|version>` runs cargo-release, which bumps
# the shared version, commits, tags vX.Y.Z, and pushes. CI publishes on the tag.
[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
pre-release-commit-message = "chore: release v{{version}}"
publish = false
allow-branch = ["main"]
