[package]
name = "katha"
version = { workspace = true }
edition = { workspace = true }
description = "Event sourcing core traits and types for Rust (SQLite/Postgres backend in katha-sqlx)"
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = "README.md"
rust-version = { workspace = true }
keywords = ["event-sourcing", "cqrs", "event-store", "sqlite", "eventstore"]
categories = ["database", "asynchronous"]

[features]
default = ["macros"]
# Enable #[derive(EventName)] for EventWrite::from_payload. Required for production use.
macros = ["dep:katha-macros"]

[dependencies]
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
katha-macros = { workspace = true, optional = true }

[dev-dependencies]
katha-macros = { workspace = true }
proptest = "1"
tokio = { workspace = true }
tempfile = { workspace = true }
